--- a/www/user/templates/menu.html
+++ b/www/user/templates/menu.html
@@ -21,6 +21,9 @@
 					<br/>
 					<h2>Usuária da Silva</h2>
 				</ion-item>
+				<ion-item menu-close ui-sref="user.favorites">
+					Manicures favoritas
+				</ion-item>
 				<ion-item menu-close ui-sref="user.nearby">
 					Manicures por perto
 				</ion-item>
