--- a/www/common/templates/login.html
+++ b/www/common/templates/login.html
@@ -1,9 +1,9 @@
-<ion-modal-view class="login-bg" hide-nav-bar="true" ng-controller="LoginCtrl">
-  <ion-content>
-    <div class="login-actions">
-      <button class="button button-calm login-button" ng-click="authenticateUser()">Login</button>
-      <br><br>
-      <span ng-click="authenticateProfessional()">É manicure? Clique aqui</span>
-    </div>
-  </ion-content>
+<ion-modal-view class="login-bg" ng-controller="LoginCtrl">
+	<ion-content>
+		<div class="login-actions">
+			<button class="button button-calm login-button" ng-click="authenticateUser()">Login</button>
+			<br><br>
+			<span ng-click="authenticateProfessional()">É manicure? Clique aqui</span>
+		</div>
+	</ion-content>
 </ion-modal-view>
